log
Fri 26 Apr 2024 04:48:53 PM UTC: 
 hashmap.c | 30 +++++++++++++++++++++++++++---
 1 file changed, 27 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
8867b53
Fri 26 Apr 2024 05:00:32 PM UTC: 
 hashmap.c | 25 +++++++++++++++++++------
 1 file changed, 19 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:103:8: error: unused variable ‘pos’ [-Werror=unused-variable]
  103 |   long pos = hash(key, map->capacity);
      |        ^~~
cc1: all warnings being treated as errors
Compilation failed
1c74b70
Fri 26 Apr 2024 05:19:09 PM UTC: 
 hashmap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  8|3
total_score: 40/70
8381bcb
Fri 26 Apr 2024 05:38:43 PM UTC: 
 hashmap.c | 21 ++++++++++++---------
 1 file changed, 12 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:91:15: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   91 |   while (map->bucket[pos] != NULL){
      |               ^~~~~~
      |               buckets
hashmap.c:93:12: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   93 |       map->bucket[pos]->key = NULL;
      |            ^~~~~~
      |            buckets
Compilation failed
64d9de6
Fri 26 Apr 2024 05:44:37 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  11|2
total_score: 50/70
8ad554b
Fri 26 Apr 2024 05:45:28 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 40/70
e1eab2a
